# openGLProjects

./: .gitignore  CMakeLists.txt  README  README.md  makefile  oldREADME.md  scene.txt
cmake/: Findassimp.cmake  Findglfw.cmake  Findglm.cmake
include/: camera.hpp  graphicslib.hpp  matrixlib.hpp  matrixlibTemplate.hpp  mesh.hpp  model.hpp  shader.hpp  tester.hpp  utils.hpp
src/: 2.2.lamp.vs  CMakeLists.txt  camera.cpp  fragment_core.glsl  gouraud.fs  gouraud.vs  graphicslib.cpp  lamp.fs  lamp.vs  main.cpp  mesh.cpp  model.cpp  model.vs  multipleLightsGouraud.fs  multipleLightsGouraud.vs  multipleLightsGouraudColor.fs  multipleLightsGouraudColor.vs  multipleLightsGouraudTex.fs  multipleLightsGouraudTex.vs  multipleLightsPhong.fs  multipleLightsPhong.vs  multipleLightsPhongColor.fs  multipleLightsPhongColor.vs  multipleLightsPhongTex.fs  shader.cpp  tester.cpp  utils.cpp  vertex_core.glsl
